# nyaland-hub

./: .actrc  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build-android.sh  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
src/: App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: e2e_download.rs
src-tauri/src/: commands.rs  lib.rs  main.rs  nyaa.rs  torrent.rs  types.rs
src-tauri/src/torrent/: handle.rs  history.rs  mod.rs  session.rs  state.rs  utils.rs
src/components/: DownloadManager.tsx  SearchBar.tsx  Settings.tsx  TorrentDetail.tsx  TorrentList.tsx  icons.tsx
src/i18n/: index.ts  translations.ts
src/stores/: downloads.ts  search.ts  settings.ts  theme.ts
src/styles/: app.css  base.css  detail.css  downloads.css  layout.css  responsive.css  search.css  settings.css  table.css
