[package]
name = "nyaland"
version = "0.1.0"
edition = "2021"
description = "Anime torrent manager for nyaa.si"
license = "MIT"

[lib]
name = "nyaland_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
nyaapi-rs.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
dirs = "5"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2"
librqbit = { version = "9.0.0-rc.0", default-features = false, features = ["rust-tls", "http-api-client"] }
anyhow = "1"
futures = "0.3"
